--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Cool Page Title</title>
+    <title>The one and only Minecraft</title>
 </head>
-<body>
-    <h1>My Main Heading</h1>
-    <p>This is a paragraph of text.</p>
+<body lightblue;>
+    <h1 green;>Why is Minecraft so famous?
+    </h1>
+    <p> Minecraft was first being developed at <b>May 2009</b>.<br>
+    The game was first <i>propperly</i> relesed on <b>November 18, 2011</b>
+    </p>
 </body>
 </html>
