--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1 green;>Why is Minecraft so famous?
     </h1>
     <p> Minecraft was first being developed at <b>May 2009</b>.<br>
-    The game was first <i>propperly</i> relesed on <b>November 18, 2011</b>
-    </p>
+    The game was first <i>propperly</i> relesed on <b>November 18, 2011</b><br>
+    The first creator of minecraft was Markus "Notch" Persson then he sold it to mojang </p>
 </body>
 </html>
