--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     <br>
     <h1> The video creators of Minecrat </h1>
     <p> One of the first Minecraft videos was uploaded by Markus "Notch" Persson's and it was Video: 
-Title: "Cave game tech test" or "Cave game tech demo".
-Date: May 13, 2009.
-Content: An early demonstration of the game's block-based building, released before the game was officially named Minecraft. <br><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_yj-dqZKnAGDJTblfwJ_pM3Lw3MgmgApUnw&s" alt=" The first minecraft house"> <br> 
+Title: "Cave game tech test" or "Cave game tech demo". <br> Date: May 13, 2009.
+Content: An early demonstration of the game's block-based building, released before the game was officially named Minecraft. <br> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_yj-dqZKnAGDJTblfwJ_pM3Lw3MgmgApUnw&s" alt=" The first minecraft house"> <br> 
     </p>
 </body>
 </html>
