--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <p> One of the first Minecraft videos was uploaded by Markus "Notch" Persson's and it was Video: 
 Title: "Cave game tech test" or "Cave game tech demo". <br> Date: May 13, 2009.
 Content: An early demonstration of the game's block-based building, released before the game was officially named Minecraft. <br> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_yj-dqZKnAGDJTblfwJ_pM3Lw3MgmgApUnw&s" alt=" The first minecraft house"> <br> 
-    </p>
+    </p> <br>
+       <h> The Side Of PvP On Minecraft</h> <br>
+       <p>Minecraft PvP (Player versus Player) involves multiplayer combat, focusing on player skill, strategy, and gear, with mechanics like attack cooldowns (post-1.9), knockback, and critical hits, existing across different versions (like 1.8 vs. 1.20+), <br>
+          popular on servers for mini-games (Hunger Games, Skyblock) and duels, and evolving with community-driven innovations to blend older and newer combat styles, making it a complex and enduring part of the game. <br>
+          </p> <h1> All You Need Guide To <a href="mc.pvp-hub.com:25544">PvP</a> </h1> <br>
+       
 </body>
 </html>
