--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@ Content: An early demonstration of the game's block-based building, released bef
           popular on servers for mini-games (Hunger Games, Skyblock) and duels, and evolving with community-driven innovations to blend older and newer combat styles, making it a complex and enduring part of the game. <br>
            All You Need Guide To <a href="mc.pvp-hub.com:25544">PvP</a> </p> <br>
 
-       <h1>Everything Of Minecraft Building</h1>
+       <h1>Everything Of Minecraft Building</h1> <br>
+       <br>
+       <p> All the info and skill of building in Minecraft comes from your <i>imagination</i> <br>
+       Minecraft building is simple all you have to do is think click and you imagination comes to <b>LIFE</b> <br> 
+       <a href="minecraftbuildinginc.com">Here </a> is a link to the top tricks to take your builds to the next level</p>
        
 </body>
 </html>
